--- a/geek01inst.html
+++ b/geek01inst.html
@@ -35,18 +35,18 @@
         export TODO_DIR="/Users/YOUR_HOME_DIR/Documents"<br>
         В кавычках должен быть указан путь к папке, в которой вы намереваетесь хранить файлы todo и done
         <br><br>
-        Здесь же вы можете настроить подсветку метаданных. Для этого в разделе ===Colors=== уберите хештеги перед командами export. 
+        Кстати, здесь же вы можете настроить подсветку метаданных. Для этого в разделе ===Colors=== уберите хештеги перед командами export. 
         Вы можете прописать любые цвета. 
         <br><br>
         Теперь можно работать с вашими todo файлами в терминале, используя различные команды.
         <br><br>
         <h3>Еще настройки.</h3>
-        Чтобы не вбивать в командной строке длинное название todo.sh <br>прибегнем к следующей хитрости:<br>
+        Чтобы не печатать в командной строке длинное название todo.sh следует прибегнуть с следующим манипуляциям:<br>
         1. В домашней папке /Users/Ваше_имя сохраняем текстовый файл с названием .bash_profile <br>
         2. Записываем в этом файле следующую волшебную фразу: <br>
              export TODOTXT_DEFAULT_ACTION=ls <br>
              alias t='./todo.sh -d /путь/к вашему/todo.cfg' <br>
-        4. Теперь набрав t вы можете сразу печатать ваши команды.<br>
+        3. Теперь набрав t вы можете сразу печатать ваши команды.<br>
         <br>
         Есть еще две полезные конфигурации, которые стоит разместить в файле .todo.cfg<br>
         export TODOTXT_DATE_ON_ADD=1<br>
@@ -111,7 +111,7 @@
         смотрим список в указанном файле<br>
         t listfile имя_файла.txt<br><br>
         добавляем задание в указанный файл<br>
-        t addto имя_файла.txt "My bright idea"<br><br>
+        t addto имя_файла.txt купить крокодила<br><br>
         ищем указанное слово в указанном файле<br>
         t lf имя_файла.txt носки <br><br>
         удаляем задание <br>
