--- a/geeklist.html
+++ b/geeklist.html
@@ -28,7 +28,7 @@
 <br>
 <br>
 Ниже представлена подборка приложений, которые могут вам пригодиться. 
-К сожалению, с руссификацией программ дело в большинстве случаев обстоит плохо. Там, где это будет необходимо я дам аннотацию 
+К сожалению, с руссификацией программ дело в большинстве случаев обстоит плохо. Там, где это будет необходимо, я дам аннотацию 
 или краткие инструкции по использованию.
 <br>
 <br>
@@ -45,13 +45,12 @@
 <br>
 Это замечательная задумка Джины Трапани, создателя ресурса lifehacker (не путайте с русскоязычным вариантом). <br>
 Программа позволяет использовать терминал для составления списка дел и управления задачами. <br>
-Трапани активно пропагандирует “Plain text” подход к организации данных. 
+Трапани активно пропагандирует Plain text подход к организации данных. 
 Вы можете посмотреть ее статьи на <a href="https://kinja.com/Gina">lifehacker.</a> 
 <br>
 Функционал приложения todo.txt несколько ограничен. 
 Без установки дополнительных расширений вы не сможете создавать повторяющиеся задачи. <br>
-Заметим, что некоторые специалисты по самоорганизации считают, что повторяющиеся задачи должны «жить» в календаре, 
-а не списке дел. 
+Однако некоторые специалисты по самоорганизации считают, что повторяющимся задачам вообще не место в списке дел. Их следует включить в расписание дня и поместить в календарь.
 <br>
 Как бы то ни было, у приложения todo.txt есть другие достоинства. 
 Прежде всего, это очень простой синтаксис. 
