--- a/geeklist.html
+++ b/geeklist.html
@@ -91,7 +91,7 @@ Youtube. Есть также специальные плагины для бра
 из терминала. 
 <br> 
 Пока доступен только Star Wars Episode IV: A New Hope. <br>
-Вам нужно установить приложение Telnet (на Mac это делает через Homebrew, инструкции для Windows <a href="https://www.lifewire.com/what-is-telnet-2626026">здесь</a>) и затем набрать команду: <br>
+Вам нужно установить приложение Telnet (на Mac это делается через Homebrew, инструкции для Windows <a href="https://www.lifewire.com/what-is-telnet-2626026">здесь</a>) и затем набрать команду: <br>
 telnet towel.blinkenlights.nl
 <br><br>
 <h3>Одна из самых сложных игр - NetHack</h3>
