--- a/index.html
+++ b/index.html
@@ -13,34 +13,55 @@
         </head>
 <body bgcolor="#fdf6e3">
 <br>
-<br>
-<br>
 <center>
-               
-<br>
-<br>
 <pre>
-<font face="Arial" size="7"><b> qejep</b></font>
+              _             
+   __ _  ___ (_) ___ _ __   
+ / _` |/ _ \| |/ _ \ '_ \ 
+| (_| |  __/| |  __/ |_) |
+ \__, |\___|/ |\___| .__/ 
+    |_|   |__/     |_|    
+      
+<br><br>
+[A]               [B]               [C]
++-----------+     +-----------+     +-----------+
+| +--+ +--+ |     | +--+ +--+ |     | +--+ +--+ |
+| |  | |  | |     | |  | |  | |     | |  | |  | |
+| |  | |  | |     | |  | |  | |     | |  | |  | |
+| |  | |  | |     | |  | |  | |     | |  | |  | |
+| +--+ +--+ |     | +--+ +--+ |     | +--+ +--+ |
+|         ~o|     |         ~o|     |         ~o|
+| +--+ +--+ |     | +--+ +--+ |     | +--+ +--+ |
+| |  | |  | |     | |  | |  | |     | |  | |  | |
+| |  | |  | |     | |  | |  | |     | |  | |  | |
+| |  | |  | |     | |  | |  | |     | |  | |  | |
+| |  | |  | |     | |  | |  | |     | |  | |  | |
+| +--+ +--+ |     | +--+ +--+ |     | +--+ +--+ |
++-----------+     +-----------+     +-----------+</pre>
 
-                        +---------------------+                       
-                        |     карта сайта     |                       
-                        +----------+----------+                       
-                                   |                                  
-                                   |                                  
-                         +---------+                                  
-                         |         |          +--------------+        
-                         v         +--------->|<a href="webcatch.html"> сетевой улов </a>|        
-                 +--------------+  |          +--------------+        
-                 |<a href="about.html">  о проекте   </a>|  |                                  
-                 +--------------+  |                                  
-                                   |          +-------------------+   
-                      +------------+--------->|<a href="geeklist.html"> путеводитель гика </a>|   
-                      |            |          +-------------------+   
-                      v            |                                  
-              +---------------+    |                                  
-              |<a href="news.html">    новости    </a>|    |          +----------------------+
-              +---------------+    +--------->|<a href="readinglist.html"> читательский маршрут </a>|
-                                              +----------------------+</pre>
+<tt>
+        <br><br>
+=================================== <br>
+<table>
+<tr>
+<td>
+А. Читательский маршрут<br>
+В. Путеводитель гика<br>
+С. Сетевой улов<br>
+</td>
+</tr>
+</table>
+=================================== <br>
+<br> 
+<table>
+<tr>
+<td>
+о проекте :: новости :: я на github
+</td>
+</tr>
+</table>
+
+</tt>
 </center>
         </font>
 </body>
