--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     |_|   |__/     |_|    
       
 <br><br>
-[A]               [B]               [C]
+<a href="readinglist.html">[A]</a>               <a href="geeklist.html">[B]</a>               <a href="webcatch.html">[C]</a>
 +-----------+     +-----------+     +-----------+
 | +--+ +--+ |     | +--+ +--+ |     | +--+ +--+ |
 | |  | |  | |     | |  | |  | |     | |  | |  | |
 | |  | |  | |     | |  | |  | |     | |  | |  | |
 | |  | |  | |     | |  | |  | |     | |  | |  | |
 | +--+ +--+ |     | +--+ +--+ |     | +--+ +--+ |
-|         ~o|     |         ~o|     |         ~o|
+|         <a href="readinglist.html">~o</a>|     |         <a href="geeklist.html">~o</a>|     |         <a href="webcatch.html">~o</a>|
 | +--+ +--+ |     | +--+ +--+ |     | +--+ +--+ |
 | |  | |  | |     | |  | |  | |     | |  | |  | |
 | |  | |  | |     | |  | |  | |     | |  | |  | |
@@ -45,9 +45,9 @@
 <table>
 <tr>
 <td>
-А. Читательский маршрут<br>
-В. Путеводитель гика<br>
-С. Сетевой улов<br>
+<a href="readinglist.html">А. Читательский маршрут</a><br>
+<a href="geeklist.html">В. Путеводитель гика</a><br>
+<a href="webcatch.html">С. Сетевой улов</a><br>
 </td>
 </tr>
 </table>
@@ -56,7 +56,7 @@
 <table>
 <tr>
 <td>
-о проекте :: новости :: я на github
+<a href="about.html">о проекте</a> :: <a href="news.html">новости</a> :: <a href="https://github.com/qejep">я на github</a>
 </td>
 </tr>
 </table>
