--- a/index.html
+++ b/index.html
@@ -53,15 +53,10 @@
 </table>
 =================================== <br>
 <br> 
-<table>
-<tr>
-<td>
-<a href="about.html">о проекте</a> :: <a href="news.html">новости</a> :: <a href="https://github.com/qejep">я на github</a>
-</td>
-</tr>
-</table>
-
 </tt>
+<pre>
+<a href="about.html">о проекте</a> :: <a href="news.html">новости</a> :: <a href="https://github.com/qejep">я на github</a>
+</pre>
 </center>
         </font>
 </body>
