--- a/bib02write.html
+++ b/bib02write.html
@@ -21,15 +21,18 @@
         <br>
 <ol>
 <li> Басов Н. Творческое саморазвитие, или как написать роман.
-    <li> Визнер К. Живой текст. Как создавать глубокую, правдоподобную прозу.
-        <li> Воттс Н. Как написать повесть.
-            <li> Как написать хороший текст. Главные лекции.
-                <li> Крон Л. С первой фразы: как увлечь читателя, используя когнитивную психологию.
-                    <li> Макки Р. Диалог: Искусство слова для писателей, сценаристов и драматургов.
-                        <li> Макки Р. История на миллион долларов.
-                            <li> Родари Д. Грамматика фантазии. Введение в искусство придумывания историй.
-                                <li> Рэнд А. Искусство беллетристики.
-                                    <li> Фрэй Д. Как написать гениальный детектив.
+<li> Визнер К. Живой текст. Как создавать глубокую, правдоподобную прозу.
+<li> Воттс Н. Как написать повесть.
+<li> Гарбер Н. Как писать в XXI веке? Учебник для начинающих энциклопедия для профессионалов вызов для всех
+<li> Как написать хороший текст. Главные лекции.
+<li> Крон Л. С первой фразы: как увлечь читателя, используя когнитивную психологию.
+<li> Макки Р. Диалог: Искусство слова для писателей, сценаристов и драматургов.
+<li> Макки Р. История на миллион долларов.
+<li> Райнкинг, Дж. Э. Остен фон дер Р. Композиция: шестнадцать уроков для начинающих авторов. 
+<li> Родари Д. Грамматика фантазии. Введение в искусство придумывания историй.
+<li> Рэнд А. Искусство беллетристики.
+<li> Труби, Д. Анатомия истории. 22 шага к созданию успешного сценария.
+<li> Фрэй Д. Как написать гениальный детектив.
 </ol>  
       
 </tt>
