--- a/bib02write.html
+++ b/bib02write.html
@@ -21,6 +21,7 @@
         <br>
 <ol>
 <li> Басов Н. Творческое саморазвитие, или как написать роман.
+<li> Бейти К. Литературный марафон. Как написать книгу за 30 дней.
 <li> Визнер К. Живой текст. Как создавать глубокую, правдоподобную прозу.
 <li> Воттс Н. Как написать повесть.
 <li> Гарбер Н. Как писать в XXI веке? Учебник для начинающих энциклопедия для профессионалов вызов для всех
