--- a/bib02write.html
+++ b/bib02write.html
@@ -23,6 +23,7 @@
 <li> Басов Н. Творческое саморазвитие, или как написать роман.
 <li> Бейти К. Литературный марафон. Как написать книгу за 30 дней.
 <li> Визнер К. Живой текст. Как создавать глубокую, правдоподобную прозу.
+<li> Вольф Ю. Литературный мастер-класс.       
 <li> Воттс Н. Как написать повесть.
 <li> Гарбер Н. Как писать в XXI веке? Учебник для начинающих энциклопедия для профессионалов вызов для всех
 <li> Как написать хороший текст. Главные лекции.
