--- a/bib02write.html
+++ b/bib02write.html
@@ -23,16 +23,19 @@
 <li> Басов Н. Творческое саморазвитие, или как написать роман.
 <li> Бейти К. Литературный марафон. Как написать книгу за 30 дней.
 <li> Визнер К. Живой текст. Как создавать глубокую, правдоподобную прозу.
-<li> Вольф Ю. Литературный мастер-класс.       
+<li> Вольф Ю. Литературный мастер-класс. Учитесь у Толстого, Чехова, Диккенса, Хемингуэя и многих других современных и классических авторов.     
 <li> Воттс Н. Как написать повесть.
-<li> Гарбер Н. Как писать в XXI веке? Учебник для начинающих энциклопедия для профессионалов вызов для всех
+<li> Гарбер Н. Как писать в XXI веке? Учебник для начинающих энциклопедия для профессионалов вызов для всех.
+<li> Индик У. Психология для сценаристов: Построение конфликта в сюжете.
 <li> Как написать хороший текст. Главные лекции.
 <li> Крон Л. С первой фразы: как увлечь читателя, используя когнитивную психологию.
+<li> Левин К. Одиссея писателя. Как найти вдохновение и соблюсти дедлайн.
 <li> Макки Р. Диалог: Искусство слова для писателей, сценаристов и драматургов.
 <li> Макки Р. История на миллион долларов.
 <li> Райнкинг, Дж. Э. Остен фон дер Р. Композиция: шестнадцать уроков для начинающих авторов. 
 <li> Родари Д. Грамматика фантазии. Введение в искусство придумывания историй.
 <li> Рэнд А. Искусство беллетристики.
+<li> Седита С. Восемь комедийных характеров. Руководство для сценаристов и актеров.
 <li> Труби, Д. Анатомия истории. 22 шага к созданию успешного сценария.
 <li> Фрэй Д. Как написать гениальный детектив.
 </ol>  
