--- a/geek01inst.html
+++ b/geek01inst.html
@@ -14,9 +14,9 @@
 
        
 <tt>
-                     --------------------------------------------------------- <br>
-<a href="index.html">главная</a> ⇢ <a href="geeklist.html">путеводитель гика</a> ⇢ todo.txt <br>
----------------------------------------------------------
+                     ---------------------------------------------------- <br>
+<a href="index.html">главная</a> ⇢ <a href="geeklist.html">путеводитель гика</a> ⇢ <a href="terminal.html">terminal</a> ⇢ todo.txt <br>
+----------------------------------------------------
         <br>
         <br>
 
