--- a/news.html
+++ b/news.html
@@ -22,6 +22,31 @@
 <center>
 <pre>
     +--------------------------------------------------------------------------------+
+    |                                    2019-12-21                                  |
+    |                                                                                |
+    |Изменился внешний вид главной страницы.                                         |
+    |                                                                                |
+    |Добавилось восемь новых пунктов в "Список книг, для тех, кто хочет научиться    |
+    |писать прозу".                                                                  |
+    |                                                                                |
+    |Добавился <a href="bib04nonf.html">"Список книг, для тех, кто хочет научиться писать нонфикшен"</a>.         |
+    |                                                                                |
+    |Реорганизована страница "Путеводитель гика".                                    |
+    |                                                                                |
+    |Добавлена страница про <a href="vim.html">Vim</a>.                                                     |
+    |                                                                                |
+    |Добавлена страница о <a href="plaintext.html">Plain text</a>.                                                |
+    |                                                                                |
+    |Добавлена страница про <a href="emacs.html">Emacs</a>.                                                   |
+    |                                                                                |
+    |Добавлена страница про <a href="latex.html">Latex</a>.                                                   |
+    +--------------------------------------------------------------------------------+
+
+
+</pre>
+
+    <pre>
+    +--------------------------------------------------------------------------------+
     |                                                                                |
     |                                   2019-12-13                                   |
     |                                 Старт проекта                                  |
