--- a/readinglist.html
+++ b/readinglist.html
@@ -28,6 +28,7 @@
 <li><a href="bib03psi.html">Список книг, для тех, кто хочет подружиться с головой.</a>
 <li><a href="bib01prad.html">Список книг, в которых художественно осмысляется феномен рекламы и PR.</a>
 <li><a href="bib02write.html">Список книг, для тех, кто хочет научиться писать прозу.</a>
+<li><a href="bib04nonf.html">Спискок книг, для тех, кто хочет научиться писать статьи, эссе, в общем, нонфикшен.</a>
 </ol>
 </tt>
 
