--- a/terminal.html
+++ b/terminal.html
@@ -86,8 +86,8 @@ Youtube. Есть также специальные плагины для бра
 <a href="http://www.asciiworld.com">asciiworld.com</a><br>
 <a href="https://textart.io">textart.io</a><br>
 <a href="https://ascii.co.uk">ascii.co.uk</a><br>
-<a href="http://patorjk.com/software/taag/#p=display&f=Graffiti&t=Type%20Something%20">patorjk.com/software/taag</a>
-<a href="http://www.network-science.de/ascii/">network-science.de/ascii</a>
+<a href="http://patorjk.com/software/taag/#p=display&f=Graffiti&t=Type%20Something%20">patorjk.com/software/taag</a><br>
+<a href="http://www.network-science.de/ascii">network-science.de/ascii</a>
 <br><br>
 Коллекции картинок <br><br>
 <a href="https://asciiart.website/index.php">asciiart.website</a><br>
