--- a/terminal.html
+++ b/terminal.html
@@ -64,7 +64,7 @@
 Прежде всего, это очень простой синтаксис. 
 Вы можете легко читать и редактировать файлы со списками дел в Vim или обычном блокноте, предустановленном на ПК. 
 <br><br>
-<a href="geek01inst.html">Перейти к инструкциям</a>
+<a href="term01txt.html">Перейти к инструкциям</a>
 <br>
 <br>
 <h3>Загрузка видео с Youtube и других видеохостингов.</h3>
