--- a/terminal.html
+++ b/terminal.html
@@ -78,7 +78,9 @@ Youtube. Есть также специальные плагины для бра
  Вот страничка проекта на github - <a href="https://github.com/ytdl-org/youtube-dl">https://github.com/ytdl-org/youtube-dl</a>
 <br>
 <br>
-<h2>Информация для гиков 80-го уровня</h2>
+---------------------------опасная черта--------------------------- <br><br>
+Вы только что пересекли опасную черту. Дальше не будет ничего особенно полезного, но зато будет много забавного. Приложения, представленные ниже нужны 
+преимущественно для прокрастинации. <br>
 <h3>Каринки в Ascii</h3>
 Картинки, конечно, не сделают вас более продуктивным. Но они помогают улыбнуться, а это тоже важно.
 <br><br>
