--- a/terminal.html
+++ b/terminal.html
@@ -79,7 +79,7 @@ Youtube. Есть также специальные плагины для бра
 <br>
 <br>
 ---------------------------опасная черта--------------------------- <br><br>
-Вы только что пересекли опасную черту. Дальше не будет ничего особенно полезного, но зато будет много забавного. Приложения, представленные ниже нужны 
+Вы только что пересекли опасную черту. Дальше не будет ничего особенно полезного, но зато будет много забавного. Приложения, представленные ниже, нужны 
 преимущественно для прокрастинации. <br>
 <h3>Каринки в Ascii</h3>
 Картинки, конечно, не сделают вас более продуктивным. Но они помогают улыбнуться, а это тоже важно.
