--- a/vim.html
+++ b/vim.html
@@ -40,6 +40,8 @@
         
 Геймификации здесь меньше, зато сразу понятно, как работают команды в редакторе. <br>
         <br><br>
+Кстати, вы можете воспользоваться командой vimtutor прямо в терминале, чтобы получить доступ к краткому (всего семь глав), но очень толковому учебнику по Vim.
+<br><br>
 Если вы думаете, что редактор Vim – это удел программистов, то заблуждаетесь. 
 Да, он очень удобен для написания программ, но Vim используют люди из самых разных сфер деятельности (лишь бы она была связана с созданием текстов). 
 <br> <br>
