--- a/vim.html
+++ b/vim.html
@@ -38,7 +38,7 @@
        <br><br> 
 Другой очень полезный ресурс – это сайт <a href="https://www.openvim.com">openvim.com</a> <br>
         
-Геймификации здесь меньше, зато сразу понятно, как работают команды в редакторе. <br>
+Геймификации здесь меньше, зато сразу понятно, как работают команды в редакторе.
         <br><br>
 Кстати, вы можете воспользоваться командой vimtutor прямо в терминале, чтобы получить доступ к краткому (всего семь глав), но очень толковому учебнику по Vim.
 <br><br>
