--- a/emacs.html
+++ b/emacs.html
@@ -35,5 +35,19 @@
        
 <br>
 <br>
+<br>
+<pre>
+        (((((((((      Emacs не умеет моргать
+        q o j o p   ________/
+         \__~__/ 
+        ___| |___ !…
+       //|  ¥  |\\//
+      || |__|__|
+      "“  ######
+          ######
+          #    # 
+          #    #
+          #    #
+         /_|  |_\</pre>
 </body>
 </html>
