--- a/vim.html
+++ b/vim.html
@@ -66,7 +66,7 @@
 <br>
 <a href="https://vim.rtorr.com/lang/ru">Vim Cheat Sheet</a>. Шпаргалка с базовыми командами Vim.
 <br>
-<a href="https://danielmiessler.com/study/vim/">Learn vim For the Last Time</a>. Замечательные проект Дэниела Мисслера. На сайте подробное руководство для новичков, помогающее освоиться в Vim.
+<a href="https://danielmiessler.com/study/vim/">Learn vim For the Last Time</a>. Замечательный проект Дэниела Мисслера. На сайте подробное руководство для новичков, помогающее освоиться в Vim.
 <br>
 <a href="http://www.oualline.com/vim-cook.html">Vim Cookbook</a>. Сборник лайфаков по использованию Vim от Стива Уаллина.
 <br><br>
