--- a/vim.html
+++ b/vim.html
@@ -42,7 +42,10 @@
         <br><br>
 Кстати, вы можете воспользоваться командой vimtutor прямо в терминале, чтобы получить доступ к краткому (всего семь глав), но очень толковому учебнику по Vim.
 <br><br>
-Если вы думаете, что редактор Vim – это удел программистов, то заблуждаетесь. 
+Если вы решили взяться за освоение Vim всерьёз (а это очень правильное решение), лучше всего обратиться к официальным руководствам. 
+На сайте <a href="https://vimhelp.org/#reference_toc">vimhelp.org</a> вы найдёте всё, что нужно. 
+<br><br>
+Возможно вы думаете, что редактор Vim – это удел программистов. Ничего подобного!  
 Да, он очень удобен для написания программ, но Vim используют люди из самых разных сфер деятельности (лишь бы она была связана с созданием текстов). 
 <br> <br>
 Вот целый раздел на форуме NaNoWriMo, посвященный использованию Vim. <br>
@@ -69,9 +72,8 @@
 <a href="https://danielmiessler.com/study/vim/">Learn vim For the Last Time</a>. Замечательный проект Дэниела Мисслера. На сайте подробное руководство для новичков, помогающее освоиться в Vim.
 <br>
 <a href="http://www.oualline.com/vim-cook.html">Vim Cookbook</a>. Сборник лайфаков по использованию Vim от Стива Уаллина.
-<br><br>
-Если вы решили взяться за освоение Vim всерьёз (а это очень правильное решение), лучше всего обратиться к официальным руководствам. 
-На сайте <a href="https://vimhelp.org/#reference_toc">vimhelp.org</a> вы найдёте всё, что нужно. 
+<br>
+<a href="https://www.youtube.com/watch?v=ez1XBUqbS68&list=PL-p5XmQHB_JSTaEPygu1DZjuFfb704Uv7&index=2">Видеоподкаст Люка Смита</a>. Видео на английском. 
 
 </tt>
        
