--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 К слову об авторе. Им является Суховский А.В., но на страницах проекта он будет выступать под псевдонимом Къежип.
 <br><br>
 Оформление страниц намерено аскетично. Вернее, оно практически отсутствует. Это сознательный ход.
-Обусловлен он ленью и - что более важно - убежденностью автора в философии Plain text.
+Обусловлен он ленью и - что более важно - убежденностью автора в философии <a href="plaintext.html">Plain text</a>.
 Слишком много в нашем сегодняшнем мире посвящено форме в ущерб содержанию. Нужно
 сделать смелый шаг и вернуться обратно к тексту. 
 <br><br>
