--- a/news.html
+++ b/news.html
@@ -21,6 +21,25 @@
         <br>
 <center>
 <pre>
+
+    +--------------------------------------------------------------------------------+
+    |                                  2019-12-27                                    |
+    |                                                                                |
+    |В разделе <a href="vim.html">Vim</a> появилось куча ссылок на полезные ресурсы.                        |
+    |                                                                                |
+    |Реорганизован раздел Terminal. Приложения для прокрастинации переехали на       |
+    |<a href="term00a.html">отдельную страничку</a>.                                                            |
+    |                                                                                |
+    |Там, кстати, появилась информация о картографическом приложении :)              |
+    |                                                                                |
+    |В самом разделе Terminal добавился <a href="term00b.html">подраздел</a> с вводной информацией по           |
+    |использованию команд.                                                           |
+    |                                                                                |
+    |Разделе "Читательский маршрут" появился список книг об <a href="bib05pol.html">изучении языков</a>.         |
+    +--------------------------------------------------------------------------------+
+</pre>
+
+<pre>
     +--------------------------------------------------------------------------------+
     |                                    2019-12-20                                  |
     |                                                                                |
@@ -41,8 +60,6 @@
     |                                                                                |
     |Добавлена страница про <a href="latex.html">Latex</a>.                                                   |
     +--------------------------------------------------------------------------------+
-
-
 </pre>
 
     <pre>
