--- a/readinglist.html
+++ b/readinglist.html
@@ -29,6 +29,7 @@
 <li><a href="bib01prad.html">Список книг, в которых художественно осмысляется феномен рекламы и PR.</a>
 <li><a href="bib02write.html">Список книг, для тех, кто хочет научиться писать прозу.</a>
 <li><a href="bib04nonf.html">Спискок книг, для тех, кто хочет научиться писать статьи, эссе, в общем, нонфикшен.</a>
+<li><a href="bib05pol.html">Список книг, для тех, кто хочет выучить много иностранных языков.</a>
 </ol>
 </tt>
 
