--- a/terminal.html
+++ b/terminal.html
@@ -44,9 +44,13 @@
 приложения <a href="https://www.cygwin.com">Cygwin</a>.
 <br>
 <br>
-* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+* * * * * * * * * * * * * * * * * * * * * 
 <br>
 <br>
+Прежде всего, вам необходимо освоиться в терминале. Не пугайтесь и не спешите. Этот опыт сильно отличается от использования графических приложений. <br>
+Предлагаю начать с освоения самых базовых принципов. <br><br>
+<a href="term00b.html">Перейти к вводному курсу</a>
+<br><br>
 <h2>Терминальные приложения для решения различных задач</h2>
 <h3>Тайм-менеджмент</h3>
 Начнем этот раздел с приложения <b>todo.txt</b> 
@@ -80,35 +84,8 @@ Youtube. Есть также специальные плагины для бра
 <br>
 ---------------------------опасная черта--------------------------- <br><br>
 Вы только что пересекли опасную черту. Дальше не будет ничего особенно полезного, но зато будет много забавного. Приложения, представленные ниже, нужны 
-преимущественно для прокрастинации. <br>
-<h3>Каринки в Ascii</h3>
-Картинки, конечно, не сделают вас более продуктивным. Но они помогают улыбнуться, а это тоже важно.
-<br><br>
-Сайты c коллекциями ascii графики и приложениями для её создания <br><br>
-<a href="http://www.asciiworld.com">asciiworld.com</a><br>
-<a href="https://textart.io">textart.io</a><br>
-<a href="https://ascii.co.uk">ascii.co.uk</a><br>
-<a href="http://patorjk.com/software/taag/#p=display&f=Graffiti&t=Type%20Something%20">patorjk.com/software/taag</a><br>
-<a href="http://www.network-science.de/ascii">network-science.de/ascii</a>
-<br><br>
-Коллекции картинок <br><br>
-<a href="https://asciiart.website/index.php">asciiart.website</a><br>
-<a href="http://instinct.org/cows/ascii-cows1.html">instinct.org</a>
-<br>
-<br>
-
-<h3>Фильм в Ascii</h3>
-Если вам не хватает гиковости картинок в ascii, посмотрите полнометражный фильм, не выходя
-из терминала. 
-<br> 
-Пока доступен только Star Wars Episode IV: A New Hope. <br>
-Вам нужно установить приложение Telnet (на Mac это делается через Homebrew, инструкции для Windows <a href="https://www.lifewire.com/what-is-telnet-2626026">здесь</a>) и затем набрать команду: <br>
-telnet towel.blinkenlights.nl
-<br><br>
-<h3>Одна из самых сложных игр - NetHack</h3>
-Игра возникла в 1987 году и до сих пор дорабатывается. Нет практически никаких шансов, что вы пройдете все 50 
-уровней в ближайшие 10 лет, но попытаться можно. <br>
-Вот ссылка на официальный сайт <a href="https://www.nethack.org">www.nethack.org</a>
+преимущественно для прокрастинации. <br><br>
+<a href="term00a.html">Переходя по ссылке, я беру всю отвественность за прокрастинацию на себя</a>
 
 </tt>
        
