--- a/term00b.html
+++ b/term00b.html
@@ -184,7 +184,7 @@ open -a Safari
 <br>
 touch файл1 файл2 файл3 файл4
 <br>
-Удалить файлы тоже можно за раз просто перечислив их после команды rm
+Удалить файлы тоже можно скопом, просто перечислив их после команды rm
 
 </tt>
        
