--- a/term00b.html
+++ b/term00b.html
@@ -46,7 +46,7 @@ man имя_команды
 Существует потрясающий квест Terminus, созданный Мишель Пратусевич.
 <br> <br>
 Выполняя разные задания, вы невзначай знакомитесь с командами терминала. 
-<br>
+<br><br>
 <a href="http://www.mprat.org/Terminus">перейти к Terminus</a>
 <br> <br>
 <h3>Дальше мы рассмотрим набор самых необходимых команд для жизни в терминале</h3>
@@ -185,6 +185,9 @@ open -a Safari
 touch файл1 файл2 файл3 файл4
 <br>
 Удалить файлы тоже можно скопом, просто перечислив их после команды rm
+
+<br><br>
+УСПЕХОВ В ДАЛЬШЕЙШЕМ ОСВОЕНИИ ТЕРМИНАЛА!
 
 </tt>
        
