--- a/terminal.html
+++ b/terminal.html
@@ -35,11 +35,10 @@
 и эффективнее. 
 <br>
 <br>
-Ниже представлена подборка приложений, которые могут вам пригодиться. 
-К сожалению, с руссификацией программ дело в большинстве случаев обстоит плохо. Там, где это будет необходимо, я дам аннотацию 
-или краткие инструкции по использованию.
-<br>
-<br>
+Однако, прежде всего, вам необходимо освоиться в терминале. Не пугайтесь и не спешите. Этот опыт сильно отличается от использования графических приложений. <br>
+Предлагаю начать с освоения самых базовых принципов. <br><br>
+<a href="term00b.html">Перейти к вводному курсу</a>
+<br><br>
 Важное примечание! Если на вашем компьютере установлена операционная система Windows, придется прибегнуть к помощи 
 приложения <a href="https://www.cygwin.com">Cygwin</a>.
 <br>
@@ -47,10 +46,10 @@
 * * * * * * * * * * * * * * * * * * * * * 
 <br>
 <br>
-Прежде всего, вам необходимо освоиться в терминале. Не пугайтесь и не спешите. Этот опыт сильно отличается от использования графических приложений. <br>
-Предлагаю начать с освоения самых базовых принципов. <br><br>
-<a href="term00b.html">Перейти к вводному курсу</a>
-<br><br>
+Ниже представлена подборка приложений, которые могут вам пригодиться. 
+К сожалению, с руссификацией программ дело в большинстве случаев обстоит плохо. Там, где это будет необходимо, я дам аннотацию 
+или краткие инструкции по использованию.
+<br>
 <h2>Терминальные приложения для решения различных задач</h2>
 <h3>Тайм-менеджмент</h3>
 Начнем этот раздел с приложения <b>todo.txt</b> 
