--- a/terminal.html
+++ b/terminal.html
@@ -52,22 +52,8 @@
 <br>
 <h2>Терминальные приложения для решения различных задач</h2>
 <h3>Тайм-менеджмент</h3>
-Начнем этот раздел с приложения <b>todo.txt</b> 
-<br>
-Это замечательная задумка Джины Трапани, создателя ресурса lifehacker (не путайте с русскоязычным вариантом). <br>
-Программа позволяет использовать терминал для составления списка дел и управления задачами. <br>
-Трапани активно пропагандирует Plain text подход к организации данных. 
-Вы можете посмотреть ее статьи на <a href="https://kinja.com/Gina">lifehacker.</a> 
-<br>
-Функционал приложения todo.txt несколько ограничен. 
-Без установки дополнительных расширений вы не сможете создавать повторяющиеся задачи. <br>
-Однако некоторые специалисты по самоорганизации считают, что повторяющимся задачам вообще не место в списке дел. Их следует включить в расписание дня и поместить в календарь.
-<br>
-Как бы то ни было, у приложения todo.txt есть другие достоинства. 
-Прежде всего, это очень простой синтаксис. 
-Вы можете легко читать и редактировать файлы со списками дел в Vim или обычном блокноте, предустановленном на ПК. 
-<br><br>
-<a href="term01txt.html">Перейти к инструкциям</a>
+<a href="term02cal.html">Календари</a><br><br>
+<a href="term01todo.html">Тудушники</a>
 <br>
 <br>
 <h3>Загрузка видео с Youtube и других видеохостингов.</h3>
