--- a/term01txt.html
+++ b/term01txt.html
@@ -14,9 +14,9 @@
 
        
 <tt>
-                     ---------------------------------------------------- <br>
-<a href="index.html">главная</a> ⇢ <a href="geeklist.html">путеводитель гика</a> ⇢ <a href="terminal.html">terminal</a> ⇢ todo.txt <br>
-----------------------------------------------------
+                     ------------------------------------------------------------------- <br>
+<a href="index.html">главная</a> ⇢ <a href="geeklist.html">путеводитель гика</a> ⇢ <a href="terminal.html">terminal</a> ⇢ <a href="term01todo.html">тудушники</a>> ⇢ todo.txt <br>
+-------------------------------------------------------------------
         <br>
         <br>
 
