--- a/term01todo.html
+++ b/term01todo.html
@@ -14,13 +14,12 @@
 
        
 <tt>
-                     ------------------------------------------------------- <br>
+                     ---------------------------------------------------- <br>
                      <a href="index.html">главная</a> ⇢ <a href="geeklist.html">путеводитель гика</a> ⇢ <a href="terminal.html">terminal</a> ⇢ тудушники <br>
--------------------------------------------------------
+----------------------------------------------------
         <br><br>
         
-        Начнем этот раздел с приложения <b>todo.txt</b> 
-        <br>
+       <h3>todo.txt</h3>
         Это замечательная задумка Джины Трапани, создателя ресурса lifehacker (не путайте с русскоязычным вариантом). <br>
         Программа позволяет использовать терминал для составления списка дел и управления задачами. <br>
         Трапани активно пропагандирует Plain text подход к организации данных. 
