--- a/term02a.html
+++ b/term02a.html
@@ -14,10 +14,10 @@
 
        
 <tt>
-                     -------------------------------------------------- <br>
-                     <a href="index.html">главная</a> ⇢ <a href="geeklist.html">путеводитель гика</a> ⇢ <a href="terminal.html">terminal</a> ⇢ <a href="term02cal.html">календари ⇢ cal <br>
---------------------------------------------------
-        <br>
+                     ---------------------------------------------------------- <br>
+                     <a href="index.html">главная</a> ⇢ <a href="geeklist.html">путеводитель гика</a> ⇢ <a href="terminal.html">terminal</a> ⇢ <a href="term02cal.html">календари</a> ⇢ cal <br>
+----------------------------------------------------------
+        <br><br>
 
         Вы можете узнать о всех функциях с помощью команды<br>
         man cal <br><br>
