--- a/news.html
+++ b/news.html
@@ -21,6 +21,16 @@
         <br>
 <center>
 <pre>
+    +--------------------------------------------------------------------------------+
+    |                                 2020-01-03                                     |
+    |                                                                                |
+    |В начале года стоит задуматься об учёте времени. В разделе terminal произошла   |
+    |небольшая реорганизация и добавилась страничка с инструкциями к приложению <a href="term02cal.html">cal</a>. |
+    +--------------------------------------------------------------------------------+
+
+</pre>
+
+<pre>
 
     +--------------------------------------------------------------------------------+
     |                                  2019-12-27                                    |
