--- a/about.html
+++ b/about.html
@@ -28,7 +28,8 @@
 лицо с прищуренными глазами. Так автор проекта удовлетворил свою страсть к 
 типографике и эмотиконам. 
 <br><br>
-К слову об авторе. Им является Суховский А.В., но на страницах проекта он будет выступать под псевдонимом Къежип.
+К слову об авторе. Им является Суховский А.В., но на страницах проекта он будет выступать под псевдонимом Къежип. Связаться с ним можно 
+<a href="about01.html">здесь</a>. 
 <br><br>
 Оформление страниц намерено аскетично. Вернее, оно практически отсутствует. Это сознательный ход.
 Обусловлен он ленью и - что более важно - убежденностью автора в философии <a href="plaintext.html">Plain text</a>.
