--- a/about01.html
+++ b/about01.html
@@ -24,15 +24,17 @@
 <br><br>
 <center>
 <pre>
-          ▒                                    ▒                            ▒   
-                      ▒▒▒▒▒▒▒▒               ▒▒▒▒▒                        ▒▒▒▒▒ 
-▒▒▒▒ ▒▒▒▒ ▒ ▒▒▒▒ ▒▒▒▒ ▒      ▒ ▒▒▒▒ ▒▒▒▒ ▒▒▒▒  ▒    ▒▒▒▒ ▒▒▒▒   ▒▒▒▒  ▒▒▒▒  ▒   
-▒  ▒ ▒  ▒ ▒ ▒  ▒ ▒  ▒ ▒ ▒▒▒▒ ▒ ▒  ▒ ▒  ▒ ▒     ▒    ▒  ▒ ▒  ▒   ▒   ▒ ▒  ▒  ▒   
-▒▒▒▒ ▒▒▒▒ ▒ ▒▒▒▒ ▒▒▒▒ ▒ ▒  ▒ ▒ ▒▒▒▒ ▒  ▒ ▒▒▒▒  ▒    ▒▒▒▒ ▒  ▒   ▒   ▒ ▒▒▒▒  ▒   
-   ▒ ▒    ▒ ▒    ▒    ▒ ▒▒▒▒▒▒ ▒    ▒  ▒    ▒  ▒  ▒ ▒    ▒  ▒   ▒   ▒ ▒     ▒  ▒
-   ▒ ▒▒▒▒ ▒ ▒▒▒▒ ▒    ▒        ▒    ▒▒▒▒ ▒▒▒▒  ▒▒▒▒ ▒▒▒▒ ▒▒▒▒ ▒ ▒   ▒ ▒▒▒▒  ▒▒▒▒
-   ▒      ▒      ▒    ▒▒▒▒▒▒▒▒ ▒                                                
-   ▒▒  ▒▒▒▒      ▒             ▒                                                </pre>
++------------------------------------------------------------------------------------+
+|            ▒                                    ▒                            ▒     |
+|                        ▒▒▒▒▒▒▒▒               ▒▒▒▒▒                        ▒▒▒▒▒   |
+|  ▒▒▒▒ ▒▒▒▒ ▒ ▒▒▒▒ ▒▒▒▒ ▒      ▒ ▒▒▒▒ ▒▒▒▒ ▒▒▒▒  ▒    ▒▒▒▒ ▒▒▒▒   ▒▒▒▒  ▒▒▒▒  ▒     |
+|  ▒  ▒ ▒  ▒ ▒ ▒  ▒ ▒  ▒ ▒ ▒▒▒▒ ▒ ▒  ▒ ▒  ▒ ▒     ▒    ▒  ▒ ▒  ▒   ▒   ▒ ▒  ▒  ▒     |
+|  ▒▒▒▒ ▒▒▒▒ ▒ ▒▒▒▒ ▒▒▒▒ ▒ ▒  ▒ ▒ ▒▒▒▒ ▒  ▒ ▒▒▒▒  ▒    ▒▒▒▒ ▒  ▒   ▒   ▒ ▒▒▒▒  ▒     |
+|     ▒ ▒    ▒ ▒    ▒    ▒ ▒▒▒▒▒▒ ▒    ▒  ▒    ▒  ▒  ▒ ▒    ▒  ▒   ▒   ▒ ▒     ▒  ▒  |
+|     ▒ ▒▒▒▒ ▒ ▒▒▒▒ ▒    ▒        ▒    ▒▒▒▒ ▒▒▒▒  ▒▒▒▒ ▒▒▒▒ ▒▒▒▒ ▒ ▒   ▒ ▒▒▒▒  ▒▒▒▒  |
+|     ▒      ▒      ▒    ▒▒▒▒▒▒▒▒ ▒                                                  |
+|     ▒▒  ▒▒▒▒      ▒             ▒                                                  |
++------------------------------------------------------------------------------------+</pre>
 </center>
 </tt>
 <br>
