--- a/webcatch.html
+++ b/webcatch.html
@@ -27,6 +27,8 @@
 <br>
 <br>
 <a href="web01lat.html">Изучение латыни</a>
+<br><br>
+<a href="webcath02.html">Цифровой детокс</a>
 
 </tt>
        <br>
