--- a/news.html
+++ b/news.html
@@ -22,6 +22,14 @@
 <center>
 <pre>
     +--------------------------------------------------------------------------------+
+    |                                   2020-01-10                                   |
+    |                                                                                |
+    |В разделе "Сетевой улов" появилась новая рубрика – "<a href="webcath02.html">цифровой детокс</a>".           |
+    +--------------------------------------------------------------------------------+
+</pre>
+
+<pre>
+    +--------------------------------------------------------------------------------+
     |                                 2020-01-03                                     |
     |                                                                                |
     |В начале года стоит задуматься об учёте времени. В разделе terminal произошла   |
