--- a/webcath02.html
+++ b/webcath02.html
@@ -19,11 +19,14 @@
 -----------------------------------------
         <br>
         <br>
-Сегодня все больше людей задумываются о возврате к цифровому минимализму. Это стремление к более умеренному использованию 
-Интернет сервисов и цифровых устройств. Причин здесь несколько. <br>
-Во-первых, выясняется, что социальные сети вызывают психологическую зависимость и просто крадут время. <br>
-Во-вторых, подобные сервисы крадут не только время, но и данные. <br>
-В-третьих, они манипулируют поведением потребителей, создавая "информационные пузыри", петли обратной связи и т.п.<br><br>
+Сегодня все больше людей задумываются о проблемах, которые таит в себе Интернет жизнь. 
+На смену безоговорочному восторгу от новых технологий, приходит отрезвление. 
+<br><br>
+Google и Facebook - это корпорации, занимающиеся экомикой внимания и торгующие данными пользователей. Одно это уже 
+достаточный повод, чтобы задуматься о большей осторожности. Но наряду с потерей приватности, мы теряем еще и время. 
+Кроме того, многие сервисы сконструированы специально для управления поведением пользователей. 
+Алгоритмы создают "информационные пузыри", петли обратной связи и т.п. Так что вы рискуете потерять не только приватность
+и время, но и адекватный взгляд на мир и самих себя. <br><br>
 Ниже представлены ресурсы, которые помогут познакомиться с проблемой и предложат решения. <br><br>
 
 <a href="https://www.calnewport.com">Блог Кола Ньюпорта</a>. <br>
