--- a/news.html
+++ b/news.html
@@ -20,6 +20,15 @@
         <br>
         <br>
 <center>
+    <pre>
+        +--------------------------------------------------------------------------------+
+        |                                   2020-01-10                                   |
+        |                                                                                |
+        |В разделе "Читательский маршрут" появился спискок книг по философской           |
+        |и библейской герменевтике. Он очень длинный хоть и не исчерпывающий. <a href="bib06herm.html">Смотреть</a>   |
+        +--------------------------------------------------------------------------------+
+    </pre>
+
 <pre>
     +--------------------------------------------------------------------------------+
     |                                   2020-01-10                                   |
