--- a/news.html
+++ b/news.html
@@ -22,16 +22,16 @@
 <center>
     <pre>
     +--------------------------------------------------------------------------------+
-    |                                2020-01-17                                      |
+    |                                 2020-01-17                                     |
     |                                                                                |
-    |В разделе "Читательский маршрут" появился спискок книг по философской           |
-    |и библейской герменевтике. Он очень длинный хоть и не исчерпывающий. <a href="bib06herm.html">Смотреть</a>   |
+    |    В разделе "Читательский маршрут" появился спискок книг по <a href="bib06herm.html">философской</a>       |
+    |    и <a href="bib07herm.html">библейской</a> герменевтике.                                                  |
     +--------------------------------------------------------------------------------+
     </pre>
 
 <pre>
     +--------------------------------------------------------------------------------+
-    |                                   2020-01-10                                   |
+    |                                 2020-01-10                                     |
     |                                                                                |
     |В разделе "Сетевой улов" появилась новая рубрика – "<a href="webcath02.html">цифровой детокс</a>".           |
     +--------------------------------------------------------------------------------+
