--- a/readinglist.html
+++ b/readinglist.html
@@ -30,7 +30,8 @@
 <li><a href="bib02write.html">Список книг, для тех, кто хочет научиться писать прозу.</a>
 <li><a href="bib04nonf.html">Спискок книг, для тех, кто хочет научиться писать статьи, эссе, в общем, нонфикшен.</a>
 <li><a href="bib05pol.html">Список книг, для тех, кто хочет выучить много иностранных языков.</a>
-<li><a href="bib06herm.html">Список книг к курсу по философской и библейской герменевтике</a> (предупреждаю, что список длинный!).
+<li><a href="bib06herm.html">Список книг к курсу по философской герменевтике</a> (предупреждаю, что список длинный!).
+<li><a href="bib07herm.html">Список книг по библейской герменевтике.</a>
 </ol>
 </tt>
 
