--- a/term00b.html
+++ b/term00b.html
@@ -49,6 +49,9 @@ man имя_команды
 <br><br>
 <a href="http://www.mprat.org/Terminus">перейти к Terminus</a>
 <br> <br>
+Еще вы можете полистать учебник Марка Бейтса <a href="http://conqueringthecommandline.com/book/frontmatter">Conquering the Command Line</a>. Там много полезных советов для начинающих.
+<br><br>
+
 <h3>Дальше мы рассмотрим набор самых необходимых команд для жизни в терминале</h3>
 
 Где я нахожусь?
